--- a/Mosques.html
+++ b/Mosques.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="container">
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a data-translate="home-button" href="home.html">الرئيسية</a></li>
                 <li><a data-translate="mall-button" href="mall.html">مراكز التسوق</a></li>
@@ -27,7 +27,6 @@
                 <li><a data-translate="entertainment-button" href="entertainment.html"> الترفيه</a></li>
             </ul>
         </nav>
-
         <section id="about-jubail">
             <h2 data-translate="about-title" > عن الجبيل </h2>
            
