--- a/hotels.html
+++ b/hotels.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="container">
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a data-translate="home-button" href="home.html">الرئيسية</a></li>
                 <li><a data-translate="mall-button" href="mall.html">مراكز التسوق</a></li>
@@ -27,9 +27,6 @@
                 <li><a data-translate="entertainment-button" href="entertainment.html"> الترفيه</a></li>
             </ul>
         </nav>
-
-       
-
 
         <section id="hotels" class="fade-in">
             <h2 class="hotels-title" data-translate="hotels-title">أفضل الفنادق في الجبيل</h2>
