--- a/entertainment.html
+++ b/entertainment.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="container">
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a data-translate="home-button" href="home.html">الرئيسية</a></li>
                 <li><a data-translate="mall-button" href="mall.html">مراكز التسوق</a></li>
@@ -40,7 +40,7 @@
         
 
     <footer>
-        <p>&copy; 2025 لمدينة الجبيل</p>
+        <p>&copy; 2025  مدينة الجبيل</p>
     </footer>
 
     <script src="script.js"></script>
