--- a/healthcare.html
+++ b/healthcare.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="container">
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a data-translate="home-button" href="home.html">الرئيسية</a></li>
                 <li><a data-translate="mall-button" href="mall.html">مراكز التسوق</a></li>
