--- a/hotels.html
+++ b/hotels.html
@@ -32,7 +32,7 @@
             <h2 class="hotels-title" data-translate="hotels-title">أفضل الفنادق في الجبيل</h2>
             <div class="hotels">
                 <div class="hotel">
-                    <img src="hotel1.jpg" alt="بارك إن راديسون الجبيل الصناعية" class="hotel-image">
+                    <img src="https://lh5.googleusercontent.com/p/AF1QipPOLwYCEtkZ0JR7lqjCseXfqUleOeTTSruLZNLJ=w408-h276-k-no" alt="بارك إن راديسون الجبيل الصناعية" class="hotel-image">
                     <h3 data-translate="hotel-name-1"> بارك إن راديسون الجبيل الصناعية  </h3>
                     <p >⭐⭐⭐☆☆ (3/5) </p>
                     <p >💰💰💰 (Medium)</p>
