--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         </nav>
 
         <section id="about-jubail">
-            <h2 data-translate="about-title" > عن الجبيل </h2>
+            <h2 data-translate="about-title" > عن مدينة الجبيل </h2>
            
             <p data-translate="about-text">تُعدُّ مدينة الجبيل من أقدم المدن الساحلية في المملكة العربية السعودية، حيث يعود تاريخها إلى أكثر من 7,000 عام. 
                 كانت تُعرف قديمًا بأنها مركزٌ مهمٌ للصيد والتجارة البحرية، نظرًا لموقعها الاستراتيجي على ساحل الخليج العربي.</p>
