--- a/entertainment.html
+++ b/entertainment.html
@@ -27,9 +27,41 @@
                 <li><a data-translate="entertainment-button" href="entertainment.html"> الترفيه</a></li>
             </ul>
         </nav>
+        <section id="hotels" class="fade-in">
+            <h2 class="hotels-title" data-translate="mosques-title">أفضل المساجد في الجبيل</h2>
+            <div class="hotels">
+                <div class="hotel">
+                    <img src="https://live.staticflickr.com/5002/5337630559_2e3878d508_b.jpg" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="mosques-name-1">جامع الفاروق</h3>
+                    <p data-translate="mosques-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
+                    <p data-translate="mosques-size-1">•	الحجم: من أكبر الجوامع في الجبيل الصناعية، ويتسع لعدد كبير من المصلين.</p>
+                    <p data-translate="mosques-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                </div>
+                <div class="hotel">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipMl7R5ZGl3C8ETRyRZJ4zgXZJywhWaeC_iPODEA=s1360-w1360-h1020" alt="جامع الفاروق" class="hotel-image">
+                    <h3 data-translate="mosques-name-2"> جامع الدكتور غازي القصيبي </h3>
+                    <p data-translate="mosques-description-2">جامع حديث تم تسميته تكريمًا للدكتور غازي القصيبي. يتميز بتصميم بسيط وأنيق يعكس الجمال العصري للعمارة الإسلامية. الجامع يوفر أجواءً هادئة وروحانية للمصلين، ويقع بالقرب من مبنى سابك الجديد، مما يجعله مميزًا من حيث الموقع.</p>
+                    <p data-translate="mosques-size-2">•الحجم: متوسط الحجم مع تصميم هندسي يستوعب المصلين بشكل مريح.</p>
+                    <p data-translate="mosques-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/5GoZcjfYinA6iQBcA" target="_blank" data-translate="mosques-link-2">جامع الدكتور غازي القصيبي</a>
+                </div>
+                <div class="hotel">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipMl7R5ZGl3C8ETRyRZJ4zgXZJywhWaeC_iPODEA=s1360-w1360-h1020" alt="جامع الفاروق" class="hotel-image">
+                    <h3 data-translate="mosques-name-2">جامع أنس بن مالك </h3>
+                    <p data-translate="mosques-description-2">يتميز جامع أنس بن مالك بأناقته وروحانيته، حيث يُعد مركزًا حيويًا للعبادة والأنشطة الدينية في حي الحويلات. الجامع مصمم بعناية ليجمع بين الراحة والبساطة، مما يجذب سكان الحي للصلاة فيه.</p>
+                    <p data-translate="mosques-size-2"> •الحجم: واسع ويتسع لأعداد كبيرة من المصلين</p>
+                    <p data-translate="mosques-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/5GoZcjfYinA6iQBcA" target="_blank" data-translate="mosques-link-2">جامع الدكتور غازي القصيبي</a>
+                </div>               
+                <div class="hotel">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipMl7R5ZGl3C8ETRyRZJ4zgXZJywhWaeC_iPODEA=s1360-w1360-h1020" alt="جامع الفاروق" class="hotel-image">
+                    <h3 data-translate="mosques-name-2">جامع أنس بن مالك </h3>
+                    <p data-translate="mosques-description-2">يتميز جامع أنس بن مالك بأناقته وروحانيته، حيث يُعد مركزًا حيويًا للعبادة والأنشطة الدينية في حي الحويلات. الجامع مصمم بعناية ليجمع بين الراحة والبساطة، مما يجذب سكان الحي للصلاة فيه.</p>
+                    <p data-translate="mosques-size-2"> •الحجم: واسع ويتسع لأعداد كبيرة من المصلين</p>
+                    <p data-translate="mosques-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/5GoZcjfYinA6iQBcA" target="_blank" data-translate="mosques-link-2">جامع الدكتور غازي القصيبي</a>
+                </div>
 
-      
-            <h2 data-translate="" > الترفيه  </h2>
+            </div>
+        </section>
+    </div>
            
 
     <footer>
