--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         </nav>
 
         <section id="about-jubail">
-            <h2 data-translate="about-title" > عن هذه الصفحة</h2>
+            <h2 data-translate="about-webpage-title" > عن هذه الصفحة</h2>
             <div class="text-image-container"class="text-image-container">
                 <p data-translate="about-page-text-1"> تم إنشاء هذه الصفحة لتكون دليلك الشامل لكل ما يخص مدينة الجبيل، حيث نقدم معلومات دقيقة حول أفضل الأماكن والخدمات المتاحة في المدينة. ستجد هنا تفاصيل عن مراكز التسوق، الفنادق، المطاعم، المرافق الصحية، المساجد، وأماكن الترفيه، مما يساعدك في استكشاف المدينة بسهولة.
                 </p>
