--- a/entertainment.html
+++ b/entertainment.html
@@ -32,29 +32,35 @@
             <h2 class="hotels-title" data-translate="place-title"> الترفيه</h2>
             <div class="hotels">
                 <div class="hotel">
-                    <img src= " add the image address here " alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="place-name-1">جامع الفاروق</h3>
-                    <p data-translate="place-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="place-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <img src= " https://welcomesaudi.com/uploads/0000/1/2021/07/23/67-fanateer-beach-jubail-eastern-province.jpg" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="place-name-1">  كورنيش الفناتير</h3>
+                    <p data-translate="place-description-1">   كورنيش الفناتير هو وجهة سياحية رائعة تقدم إطلالات خلابة على البحر، مما يجعله مكانًا مثاليًا للاسترخاء والتنزه. </p>
+                    <p data-translate="place-Features-1"> المميزات: يتميز بموقعه الذي يقع بوسط المدينة واحتواءه على افضل متاجر العطور </p>
+                    <p data-translate="place-location1">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/PJBx6jJUu8w1XkWV6" target="_blank" data-translate="mosques-link-1"> كورنيش الفناتير</a>
                 </div>
                 <div class="hotel">
-                    <img src= " add the image address here " alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="place-name-1">جامع الفاروق</h3>
-                    <p data-translate="place-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="place-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <img src= " https://welcomesaudi.com/uploads/0000/1/2021/07/23/67-fanateer-beach-jubail-eastern-province.jpg" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="place-name-1">  كورنيش الفناتير</h3>
+                    <p data-translate="place-description-1">   كورنيش الفناتير هو وجهة سياحية رائعة تقدم إطلالات خلابة على البحر، مما يجعله مكانًا مثاليًا للاسترخاء والتنزه. </p>
+                    <p data-translate="place-Features-1"> المميزات: يتميز بموقعه الذي يقع بوسط المدينة واحتواءه على افضل متاجر العطور </p>
+                    <p data-translate="place-location1">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/PJBx6jJUu8w1XkWV6" target="_blank" data-translate="mosques-link-1"> كورنيش الفناتير</a>
                 </div>
                 <div class="hotel">
-                    <img src= " add the image address here " alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="place-name-1">جامع الفاروق</h3>
-                    <p data-translate="place-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="place-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
-                </div>               
-                <div class="hotel">
-                    <img src= " add the image address here " alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="place-name-1">جامع الفاروق</h3>
-                    <p data-translate="place-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="place-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <img src= " https://welcomesaudi.com/uploads/0000/1/2021/07/23/67-fanateer-beach-jubail-eastern-province.jpg" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="place-name-1">  كورنيش الفناتير</h3>
+                    <p data-translate="place-description-1">   كورنيش الفناتير هو وجهة سياحية رائعة تقدم إطلالات خلابة على البحر، مما يجعله مكانًا مثاليًا للاسترخاء والتنزه. </p>
+                    <p data-translate="place-Features-1"> المميزات: يتميز بموقعه الذي يقع بوسط المدينة واحتواءه على افضل متاجر العطور </p>
+                    <p data-translate="place-location1">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/PJBx6jJUu8w1XkWV6" target="_blank" data-translate="mosques-link-1"> كورنيش الفناتير</a>
                 </div>
+                <div class="hotel">
+                    <img src= " https://welcomesaudi.com/uploads/0000/1/2021/07/23/67-fanateer-beach-jubail-eastern-province.jpg" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="place-name-1">  كورنيش الفناتير</h3>
+                    <p data-translate="place-description-1">   كورنيش الفناتير هو وجهة سياحية رائعة تقدم إطلالات خلابة على البحر، مما يجعله مكانًا مثاليًا للاسترخاء والتنزه. </p>
+                    <p data-translate="place-Features-1"> المميزات: يتميز بموقعه الذي يقع بوسط المدينة واحتواءه على افضل متاجر العطور </p>
+                    <p data-translate="place-location1">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/PJBx6jJUu8w1XkWV6" target="_blank" data-translate="mosques-link-1"> كورنيش الفناتير</a>
+                </div>
+                
+               
 
             </div>
         </section>
