--- a/healthcare.html
+++ b/healthcare.html
@@ -32,33 +32,31 @@
             <h2 class="hotels-title" data-translate="healthcare-title">الصحة</h2>
             <div class="hotels">
                 <div class="hotel">
-                    <img src=" add the image address here" alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="healthcare-name-1">جامع الفاروق</h3>
-                    <p data-translate="healthcare-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="healthcare-type-1">•	الحجم: من أكبر الجوامع في الجبيل الصناعية، ويتسع لعدد كبير من المصلين.</p>
-                    <p data-translate="healthcare-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <img src="https://lh5.googleusercontent.com/p/AF1QipMn4dWW3UotmoTlva0iqj0053LiquD83XNga0J8=w900-h975-p-k-no" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="healthcare-name-1">مستشفى الهيئة الملكية بالجبيل</h3>
+                    <p data-translate="healthcare-description-1"> مستشفى حكومي</p>
+                    <p data-translate="healthcare-type-1">	يُدار هذا المستشفى من قبل الهيئة الملكية للجبيل وينبع، ويوفر الخدمات الصحية للمقيمين والعاملين في مدينة الجبيل الصناعية</p>
+                    <p data-translate="healthcare-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/QiC4PeMoaZwW1ViR7" target="_blank" data-translate="healthcare-link-1"> مستشفى الهيئة الملكية بالجبيل</a>
+                    <a href="https://www.rchsp.med.sa/ar/index.html" data-translate="healthcare-more">المزيد</a>
                 </div>
                 <div class="hotel">
-                    <img src=" add the image address here" alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="healthcare-name-1">جامع الفاروق</h3>
-                    <p data-translate="healthcare-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="healthcare-type-1">•	الحجم: من أكبر الجوامع في الجبيل الصناعية، ويتسع لعدد كبير من المصلين.</p>
-                    <p data-translate="healthcare-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <img src=" https://lh3.googleusercontent.com/p/AF1QipPp-EWcuaSRXPBSsRp_7D9_yLrL_Dp-G8xMmBGW=s1360-w1360-h1020" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="healthcare-name-1">مستشفى الهيئة الملكية بالجبيل</h3>
+                    <p data-translate="healthcare-description-1"> مستشفى حكومي</p>
+                    <p data-translate="healthcare-type-1">	يُدار هذا المستشفى من قبل الهيئة الملكية للجبيل وينبع، ويوفر الخدمات الصحية للمقيمين والعاملين في مدينة الجبيل الصناعية</p>
+                    <p data-translate="healthcare-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/QiC4PeMoaZwW1ViR7" target="_blank" data-translate="healthcare-link-1"> مستشفى الهيئة الملكية بالجبيل</a>
+                    <a href="https://www.rchsp.med.sa/ar/index.html" data-translate="healthcare-more">المزيد</a>
                 </div>
                 <div class="hotel">
-                    <img src=" add the image address here" alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="healthcare-name-1">جامع الفاروق</h3>
-                    <p data-translate="healthcare-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="healthcare-type-1">•	الحجم: من أكبر الجوامع في الجبيل الصناعية، ويتسع لعدد كبير من المصلين.</p>
-                    <p data-translate="healthcare-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <img src=" https://lh3.googleusercontent.com/p/AF1QipPp-EWcuaSRXPBSsRp_7D9_yLrL_Dp-G8xMmBGW=s1360-w1360-h1020" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="healthcare-name-1">مستشفى الهيئة الملكية بالجبيل</h3>
+                    <p data-translate="healthcare-description-1"> مستشفى حكومي</p>
+                    <p data-translate="healthcare-type-1">	يُدار هذا المستشفى من قبل الهيئة الملكية للجبيل وينبع، ويوفر الخدمات الصحية للمقيمين والعاملين في مدينة الجبيل الصناعية</p>
+                    <p data-translate="healthcare-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/QiC4PeMoaZwW1ViR7" target="_blank" data-translate="healthcare-link-1"> مستشفى الهيئة الملكية بالجبيل</a>
+                    <a href="https://www.rchsp.med.sa/ar/index.html" data-translate="healthcare-more">المزيد</a>
                 </div>              
-                <div class="hotel">
-                    <img src=" add the image address here" alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="healthcare-name-1">جامع الفاروق</h3>
-                    <p data-translate="healthcare-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="healthcare-type-1">•	الحجم: من أكبر الجوامع في الجبيل الصناعية، ويتسع لعدد كبير من المصلين.</p>
-                    <p data-translate="healthcare-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
-                </div>
+               <h2>النوادي الرياضية</h2>
+
             </div>
         </section>
     </div>
