--- a/entertainment.html
+++ b/entertainment.html
@@ -90,7 +90,7 @@
                     <h3 data-translate="place-name-1"> منتزه نجد</h3>
                     <p data-translate="place-description-1"> منتزه واسع يجمع بين المسطحات الخضراء والمرافق الترفيهية، ويُعرف بإقامة فعالياته الموسمية. مناسب جدًا للعائلات والشباب.​</p>
                     <p data-translate="place-Features-1"> المميزات: نافورة مركزية، جلسات مريحة، فعاليات موسمية، مناسب للشباب والعوائل، مسطحات خضراء نظيفة.</p>
-                    <p data-translate="place-location1">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/CQN5d75Mvvfm83o89" target="_blank" data-translate="place-link-1"> كورنيش الفناتير</a>
+                    <p data-translate="place-location1">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/CQN5d75Mvvfm83o89" target="_blank" data-translate="place-link-1"> منتزه نجد</a>
                 </div>
                 
                 
