--- a/healthcare.html
+++ b/healthcare.html
@@ -102,8 +102,7 @@
                 <p data-translate="gym-description-2"> يُعتبر "iN2 فتنس" من الأندية الرياضية الرائدة في المملكة العربية السعودية، حيث يقدم مرافق رياضية متكاملة وتجربة لياقة بدنية متميزة. يهدف النادي إلى تلبية احتياجات الأعضاء من خلال تقديم خدمات عالية الجودة ومرافق مجهزة بأحدث التقنيات. يتميز النادي بإطلالة خلابة على البحر</p>
                 <p data-translate="gym-serveis-2"> •	مساحات مصممة على مستوى عالمي: لتلبية جميع احتياجات اللياقة البدنية للأعضاء.
                     •	أحدث تقنيات أجهزة الكارديو وتمارين القوة: لضمان تجربة تدريبية فعّالة.
-                    •	استوديوهات مخصصة لتمارين اللياقة البدنية الجماعية: لتوفير بيئة تحفيزية وممتعة.
-                    </p>
+                    •	استوديوهات مخصصة لتمارين اللياقة البدنية الجماعية: لتوفير بيئة تحفيزية وممتعة. </p>
                 <p data-translate="gym-location2">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/kTG27SXZfQg32Qn77" target="_blank" data-translate="gym-link-2"> نادي iN2 فتنس</a>
                 <a href="https://in2fitness.sa/ab/" data-translate="gym-more-1">المزيد</a>
             </div>
