--- a/eat.html
+++ b/eat.html
@@ -36,16 +36,22 @@
             <h2 class="hotels-title" data-translate="eat-place-title">  المطاعم </h2>
             <div class="hotels">
                 <div class="hotel">
-                    <img src=" add the image address here" alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="eat-place-name-1">جامع الفاروق</h3>
-                    <p data-translate="eat-place-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="eat-place-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipNF96QQOVFCuJ_7caIbll8UrUOtaelNjZK6nPit=w426-h240-k-no" alt="فندق كورال الجبيل" class="hotel-image">
+                    <h3 data-translate="eat-place-name-1"> ستيك هاوس</h3>
+                    <p data-translate="eat-place-price-1">  $$$$ (مرتفع)</p>
+                    <p> ⭐⭐⭐⭐☆ (4/5)</p>
+                    <p data-translate="eat-place-type-1"> مطعم أمريكي متخصص في تقديم شرائح اللحم المشوية</p>
+                    <p data-translate="eat-place-description-1"> هو مطعم يقدم تجربة مميزة لعشاق اللحوم، ويشتهر بتقديم شرائح الستيك المشوية على الطريقة الأمريكية الأصلية. تأسس المطعم ليجمع بين الجودة العالية، والنكهات الغنية، والخدمة الراقية، مما جعله وجهة مفضلة لمحبي المأكولات المشوية.</p>
+                    <p data-translate="eat-place-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/8rKRz4FVomQfkXQ77" target="_blank" data-translate="eat-place-link-1"> ستيك هاوس</a>
                 </div>
                 <div class="hotel">
                     <img src=" add the image address here" alt="فندق كورال الجبيل" class="hotel-image">
-                    <h3 data-translate="eat-place-name-1">جامع الفاروق</h3>
-                    <p data-translate="eat-place-description-1"> جامع الفاروق يُعتبر من أبرز وأكبر الجوامع في الجبيل الصناعية. يتميز بتصميم معماري يجمع بين الطراز الإسلامي الكلاسيكي واللمسات الحديثة، مما يجعله معلمًا روحانيًا وجماليًا في المدينة. يستقبل أعدادًا كبيرة من المصلين خلال الأوقات اليومية والمناسبات الدينية.</p>
-                    <p data-translate="eat-place-location">الموقع على خرائط جوجل</p> <a href="https://g.co/kgs/8qk39Wg" target="_blank" data-translate="mosques-link-1"> جامع الفاروق - الجبيل</a>
+                    <h3 data-translate="eat-place-name-1"> ستيك هاوس</h3>
+                    <p data-translate="eat-place-price-1">  $$$$ (مرتفع)</p>
+                    <p> ⭐⭐⭐⭐☆ (4/5)</p>
+                    <p data-translate="eat-place-type-1"> مطعم أمريكي متخصص في تقديم شرائح اللحم المشوية</p>
+                    <p data-translate="eat-place-description-1"> هو مطعم يقدم تجربة مميزة لعشاق اللحوم، ويشتهر بتقديم شرائح الستيك المشوية على الطريقة الأمريكية الأصلية. تأسس المطعم ليجمع بين الجودة العالية، والنكهات الغنية، والخدمة الراقية، مما جعله وجهة مفضلة لمحبي المأكولات المشوية.</p>
+                    <p data-translate="eat-place-location">الموقع على خرائط جوجل</p> <a href="https://maps.app.goo.gl/8rKRz4FVomQfkXQ77" target="_blank" data-translate="eat-place-link-1"> ستيك هاوس</a>
                 </div>
                             
 
