--- a/entertainment.html
+++ b/entertainment.html
@@ -23,13 +23,15 @@
     <div class="container">
         <nav class="navbar">
             <ul>
-                <li><a data-translate="home-button" href="home.html">الرئيسية</a></li>
-                <li><a data-translate="mall-button" href="mall.html">مراكز التسوق</a></li>
-                <li><a data-translate="hotels-button" href="hotels.html">الفنادق</a></li>
-                <li><a data-translate="eat-button" href="eat.html"> الاكل</a></li>
-                <li><a data-translate="healthcare-button" href="healthcare.html">الصحة</a></li>
-                <li><a data-translate="mosques-button" href="mosques.html">المساجد</a></li>
-                <li><a data-translate="entertainment-button" href="entertainment.html"> الترفيه</a></li>
+                <ul>
+                    <li><a data-translate="home-button" href="home.html">الرئيسية</a></li>
+                    <li><a data-translate="mall-button" href="mall.html">مراكز التسوق</a></li>
+                    <li><a data-translate="hotels-button" href="hotels.html">الإقامة</a></li>
+                    <li><a data-translate="eat-button" href="eat.html"> المطاعم</a></li>
+                    <li><a data-translate="healthcare-button" href="healthcare.html">الصحة</a></li>
+                    <li><a data-translate="mosques-button" href="mosques.html">المساجد</a></li>
+                    <li><a data-translate="entertainment-button" href="entertainment.html"> الترفيه</a></li>
+                </ul>
             </ul>
         </nav>
         <section id="hotels" class="fade-in">
