--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1 data-translate="main-title"> دليلك الشامل لكل ما يخص مدينة الجبيل</h1>
+        <h1 data-translate="main-title"> دليلك الشامل لكل ما يخص مدينة الجبيل الناعية</h1>
     
         <img src="https://media-hosting.imagekit.io//eba24db1e42748f1/d38e1fc6-ee10-4eb6-b4d4-0a7a3487dead-removebg-preview.png?Expires=1836306884&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=fTNZgMGouc1VdyA3rr8QbGWpw-VgT3MMnW6Cz7i9mAvHbXj~qsMmn4-8bpKwonDUnK6zVgmDwcymsuwcbeVCbDycRcn7eKb382hgoVBsgv-tLAE~poBEIOnobRvF3zMFAiSy6i1xwlaEhQu7lVHXXaROHfkH9nCwi0SOq0uOgiYrcg1aAb7fkDgSSG~eYdog4kyyAedBCC~j25kbuEbIR4ltsAOB25pG9COaolxVZqo1fgKZM9XH8PZbVVJEmGy3NGM0DbryALVPjsm5-i0zwFm5BGQh5lrUneZajtZRAvR47dbS4EsmVUt~P3UBT6AMDv1GUttoWwcnVfxo5CGxJA__" alt="Logo" class="logo">     
        
