--- a/entertainment.html
+++ b/entertainment.html
@@ -92,7 +92,7 @@
                 
 
                 <div class="hotel">
-                    <img src= "https://scth.scene7.com/is/image/scth/dareen-hills-park-in-al-jubail-hero-banner-1:crop-1920x1080?defaultImage=dareen-hills-park-in-al-jubail-hero-banner-1&wid=1920&hei=1080" alt="فندق كورال الجبيل" class="hotel-image">
+                    <img src= "https://i.ytimg.com/vi/65BhrLBb2So/maxresdefault.jpg" alt="فندق كورال الجبيل" class="hotel-image">
                     <h3 data-translate="place-name-4">  منتزه التلال</h3>
                     <p data-translate="place-description-4">   متنزه تلال دارين في الجبيل يمتاز بأجوائه اللطيفة ونسمات هوائه المنعشة  وطبيعته الخلابة المكسوة بالمسطحات الخضراء الواسعة المطلة على شاطئ بحري، مما يجعله مقصدًا يوميًّا مثاليًّا. </p>
                     <p data-translate="place-Features-4"> المميزات:   إطلالة بحرية، مساحات خضراء، ممشى، ألعاب أطفال، جلسات جميلة، مناسب لتصوير الغروب والأجواء العائلية.</p>
